# genred_english

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
db/: data.sql  schema.sql
deployment/: .env.example  deploy.sh  genred_english.service
lambda/scoring/: function.jsonnet  go.mod  go.sum  main.go
