[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application with Nginx proxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
    "boto3>=1.40.69",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
